--- a/data/applications/user-guide.desktop
+++ b/data/applications/user-guide.desktop
@@ -3,7 +3,7 @@ Encoding=UTF-8
 Version=1.0
 Name=tana_ap_user_guide
 Comment=Show the user guide in a new window
-Exec=dbus-send --print-reply --dest=com.nokia.osso_browser /com/nokia/osso_browser/request com.nokia.osso_browser.open_new_window string:http://maemo.nokia.com/n900/userguides/
+Exec=x-www-browser file:///usr/share/doc/maemo-user-guide/html/index.html
 Icon=tasklaunch_user_guide
 Terminal=false
 Type=Application
